Bug 147935 - Cannot insert cell from calc to writer as DDE link
Summary: Cannot insert cell from calc to writer as DDE link
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-03-12 09:31 UTC by raal
Modified: 2022-03-14 17:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2022-03-12 09:31:51 UTC
Description:
 regression, it worked in 7.2.5.

Steps to Reproduce:
 - open test files in bug 147480
 - open destination.odt and source.ods
 - copy A1 from spreadsheet file source.ods 
 - ctrl+shift+v into destination.odt
 - select Dynamic Data Exchange (DDE link)

Actual Results:
 Error message: A table with no rows or no cells cannot be inserted.

Expected Results:
insert data


Reproducible: Always


User Profile Reset: No



Additional Info:
Tested Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: dddee125cc32f1ad5228e598a7de04e9654e65c1
CPU threads: 4; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 1 raal 2022-03-12 09:33:28 UTC
This seems to have begun at the below commit.
Adding Cc: to Eike Rathke; Could you possibly take a look at this one?
Thanks

 bibisect/linux-64-7.4
 211dc7de95868c52468d611c772a3d610a7964de is the first bad commit
commit 211dc7de95868c52468d611c772a3d610a7964de
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Feb 17 19:15:00 2022 +0100

    source be13ca182d7b0b59ad0c9509200cfdc45bd15cf2

https://git.libreoffice.org/core/+/be13ca182d7b0b59ad0c9509200cfdc45bd15cf2
  Resolves: tdf#147496 No line feed for one single cell in clipboard Doc2Text()
Comment 2 m_a_riosv 2022-03-13 13:11:03 UTC
Reproducible
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 6adabd915d931b845fcf2fef15fbf3fca14ec9b3
CPU threads: 4; OS: Windows 10.0 Build 21390; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL
Comment 3 m_a_riosv 2022-03-13 13:13:25 UTC
But copying A1 to B1 in calc and then copy both cells and paste as DDE in writer it works.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2022-03-14 13:54:51 UTC
Sigh.. Writer.. DDE.. double sigh.
Comment 5 Commit Notification 2022-03-14 15:19:50 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/24e213b11569400751fc54bfbeb5a5f6afdd4172

Resolves: tdf#147935 A row may have no newline character, tdf#147496 follow-up

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-03-14 17:17:16 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/061c71c8f9cbf154c21e3726325894a529c89e1b

tdf#147935: sw: Add UItest

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.