Resolves: tdf#147935 A row may have no newline character, tdf#147496 follow-up

Change-Id: I91672e31e324cdd17c02ca328863b636beeb5e45
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131546
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins